Add description, ingredients, and steps for recipe

--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -6,5 +6,28 @@
     </head>
     <body>
         <h1>Chocolate Chip Cookies</h1>
+        <img src="https://www.allrecipes.com/thmb/VhuGUCrtTjF0BqDDzYM90WlFi3o=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/10813-best-chocolate-chip-cookies-mfs-146-a3ecd03db88743a4b48af360d889ec82.jpg" alt="Picture of Chocolate Chip Cookie"> 
+        <h2>Description</h2>
+        <p>Making desserts is always a hassle. Most of the time it is more convenient to buy desserts from the store. However, there is one dessert worth making. This recipe involves making delectable and delicious <strong><em>chocolate chip cookies</em></strong>. This page will display the ingredients 
+        required and then will provide you with the necessary steps to make this delightful dessert.</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Butter</li>
+            <li>Eggs</li>
+            <li>Vanilla</li>
+            <li>Baking Soda</li>
+            <li>Water</li>
+            <li>Salt</li>
+            <li>Flour</li>
+            <li>Chocolate chips</li>
+        </ul>
+        <h4>Steps</h4>
+        <ol>
+            <li>Beat the butter and sugars, then beat in the eggs and vanilla.</li>
+            <li> Dissolve the baking soda in hot water and add to the mixture</li>
+            <li>Stir in the flour, chocolate chips.</li>
+            <li>Drop dough onto a prepared baking sheet.</li>
+            <li>Bake until the edges are golden brown.</li>
+        </ol>
     </body>
 </html>
