--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/cookie.html">Chocolate Chip Cookies</a>
+        <a href="recipes/smoothie.html">Fruit and Yogurt Smoothie</a>
     </body>
 </html>
