Add link for tacos recipe on index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>Odin Recipes</h1>
         <a href="recipes/cookie.html">Chocolate Chip Cookies</a>
         <a href="recipes/smoothie.html">Fruit and Yogurt Smoothie</a>
+        <a href="recipes/tacos.html">Low-carb Tacos</a>
     </body>
 </html>
