Add basic styling to each html file by creating stylesheets: style.css, rstyle.css

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title></title>
-    </head>
-    <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/cookie.html">Chocolate Chip Cookies</a>
-        <a href="recipes/smoothie.html">Fruit and Yogurt Smoothie</a>
-        <a href="recipes/tacos.html">Low-carb Tacos</a>
-    </body>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <title></title>
+  </head>
+  <body>
+    <h1>Odin Recipes</h1>
+    <div id="recipes">
+      <a href="recipes/cookie.html" target="_blank">Chocolate Chip Cookies</a>
+      <a href="recipes/smoothie.html" target="_blank"
+        >Fruit and Yogurt Smoothie</a
+      >
+      <a href="recipes/tacos.html" target="_blank">Low-carb Tacos</a>
+    </div>
+  </body>
 </html>
