--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -1,33 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <link rel="stylesheet" href="rstyle.css" />
+    <meta charset="UTF-8" />
     <title>Low-carb Tacos</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Low-carb Tacos</h1>
-    <img src="https://www.allrecipes.com/thmb/QgOiArqcdiKeNa3Q6rmmC159Vdg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/3884031-6bbabeeff5834d69ada6c2a90056b718.jpg"> 
+    <img
+      src="https://www.allrecipes.com/thmb/QgOiArqcdiKeNa3Q6rmmC159Vdg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/3884031-6bbabeeff5834d69ada6c2a90056b718.jpg"
+    />
     <h2>Description</h2>
-    <p>Staying on diet is not easy in any way, shape, or form. Most people torture themselves by eating plain food because that what their diet calls for. However, with this recipe for <strong><em>low-carb tacos</em></strong>, one can be on a diet and enjoy the food they are eating! On this page we will discuss the ingredients and steps required for these tacos.</p>
+    <p>
+      Staying on diet is not easy in any way, shape, or form. Most people
+      torture themselves by eating plain food because that what their diet calls
+      for. However, with this recipe for <strong><em>low-carb tacos</em></strong
+      >, one can be on a diet and enjoy the food they are eating! On this page
+      we will discuss the ingredients and steps required for these tacos.
+    </p>
     <h3>Ingredients</h3>
     <ul>
-        <li>1 ½ pounds ground beef</li>
-        <li>1 onion, diced</li>
-        <li>½ (4 ounce) can diced jalapeno peppers</li>
-        <li>1 (1 ounce) package taco seasoning mix</li>
-        <li>2 cups shredded lettuce</li>
-        <li>1 tomato, chopped</li>
-        <li>½ cup shredded reduced-fat Cheddar cheese</li>
-        <li>¼ cup salsa</li>
-        <li>¼ cup low-fat sour cream</li>
-        <li>1 avocado - peeled, pitted, and sliced</li>
+      <li>1 ½ pounds ground beef</li>
+      <li>1 onion, diced</li>
+      <li>½ (4 ounce) can diced jalapeno peppers</li>
+      <li>1 (1 ounce) package taco seasoning mix</li>
+      <li>2 cups shredded lettuce</li>
+      <li>1 tomato, chopped</li>
+      <li>½ cup shredded reduced-fat Cheddar cheese</li>
+      <li>¼ cup salsa</li>
+      <li>¼ cup low-fat sour cream</li>
+      <li>1 avocado - peeled, pitted, and sliced</li>
     </ul>
     <h4>Steps</h4>
     <ol>
-        <li>Cook and stir ground beef, onion, and jalapeno peppers together in a skillet over medium-high heat until meat is browned and crumbly, 7 to 10 minutes.</li>
-        <li>Stir taco seasoning into meat mixture; bring to a simmer and cook until flavors combine, about 5 minutes.</li>
-        <li>Stir meat mixture, shredded lettuce, tomato, Cheddar cheese, salsa, and sour cream together in a large bowl.</li>
-        <li>Divide taco mixture among 4 bowls and top each with avocado slices.</li>
-    </ol> 
-</body>
+      <li>
+        Cook and stir ground beef, onion, and jalapeno peppers together in a
+        skillet over medium-high heat until meat is browned and crumbly, 7 to 10
+        minutes.
+      </li>
+      <li>
+        Stir taco seasoning into meat mixture; bring to a simmer and cook until
+        flavors combine, about 5 minutes.
+      </li>
+      <li>
+        Stir meat mixture, shredded lettuce, tomato, Cheddar cheese, salsa, and
+        sour cream together in a large bowl.
+      </li>
+      <li>
+        Divide taco mixture among 4 bowls and top each with avocado slices.
+      </li>
+    </ol>
+  </body>
 </html>
