--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title></title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
+    <div id="headers">
+      <h1>Recipes</h1>
+      <h2>
+        Have no idea what to make for a meal? Well here are 3 delicious recipes
+        that can be used to make one satisfying meal! Click on one of the links
+        below to get started!
+      </h2>
+    </div>
     <div id="recipes">
       <a href="recipes/cookie.html" target="_blank">Chocolate Chip Cookies</a>
       <a href="recipes/smoothie.html" target="_blank"
